// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-empty renders 1`] = `
<ce-empty>
  <mock:shadow-root>
    <div class="empty">
      <slot></slot>
    </div>
  </mock:shadow-root>
</ce-empty>
`;

exports[`sc-empty renders 1`] = `
<sc-empty>
  <mock:shadow-root>
    <div class="empty">
      <slot></slot>
    </div>
  </mock:shadow-root>
</sc-empty>
`;
